--- a/notebooks/misc_fraud_findings.ipynb
+++ b/notebooks/misc_fraud_findings.ipynb
@@ -6085,6 +6085,7 @@
     }
    ],
    "source": [
+    "#check the revenue of those with 20% of the maximum number of unique customers\n",
     "df.filter(F.col('Unique Customers') < 0.2*20111).sort('Total Revenue', ascending = False)"
    ]
   },
@@ -6155,77 +6156,8 @@
     }
    ],
    "source": [
+    "#check the revenue of those with greater than 20% of the maximum number of unique customers for a merchant\n",
     "df.filter(F.col('Unique Customers') > 0.2*20111).sort('Total Revenue', ascending = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th>merchant_abn</th><th>tags</th><th>take_rate</th><th>type</th><th>Total Revenue</th><th>Total Sales</th><th>Merchant Fraud</th><th>Consumer Fraud</th><th>Median Family Income</th><th>avg(seasonal_sales)</th><th>avg(original_sales)</th><th>Average Household Size</th><th>Unique Customers</th><th>Average Expected Revenue</th><th>Days with Sales</th></tr>\n",
-       "<tr><td>64203420245</td><td>tent, awning</td><td>2.86</td><td>c</td><td>6299699.598407542</td><td>217571</td><td>30.612495680513543</td><td>14.871396677745812</td><td>1978.0475247160698</td><td>6483.831479838419</td><td>6475.44229377983</td><td>2.458449885324781</td><td>20111</td><td>0.489725251044011</td><td>606</td></tr>\n",
-       "<tr><td>86578477987</td><td>watch, clock, jew...</td><td>6.43</td><td>a</td><td>7972145.046437768</td><td>227775</td><td>28.576456098300703</td><td>15.140652905079124</td><td>1977.0436966304467</td><td>6505.567195697163</td><td>6494.275517067175</td><td>2.4582956865327588</td><td>20111</td><td>1.3648947806370788</td><td>606</td></tr>\n",
-       "<tr><td>45629217853</td><td>gift, card, novel...</td><td>6.98</td><td>a</td><td>7018507.434966652</td><td>190768</td><td>30.571603398126562</td><td>15.773599561837635</td><td>1974.7658831669883</td><td>6501.068451731659</td><td>6495.1992037447535</td><td>2.4591949383544414</td><td>20111</td><td>1.5099632925580027</td><td>606</td></tr>\n",
-       "<tr><td>89726005175</td><td>tent, awning</td><td>6.01</td><td>a</td><td>7428298.547384338</td><td>180185</td><td>30.468602464836877</td><td>14.907350810485063</td><td>1976.4575353109303</td><td>6473.880059383172</td><td>6466.097259483214</td><td>2.4586203069067913</td><td>20110</td><td>1.4710167475270712</td><td>606</td></tr>\n",
-       "<tr><td>24852446429</td><td>florists supplies...</td><td>2.94</td><td>c</td><td>7254337.468013417</td><td>241506</td><td>52.77404521439999</td><td>15.138574786399698</td><td>1974.2637946883308</td><td>6499.6533651334585</td><td>6490.692043261773</td><td>2.4574702077794957</td><td>20110</td><td>0.35430937934354906</td><td>606</td></tr>\n",
-       "<tr><td>49891706470</td><td>tent, awning</td><td>5.8</td><td>a</td><td>5993213.999709736</td><td>206878</td><td>30.484949771451102</td><td>14.911243830439796</td><td>1974.3533096801013</td><td>6493.379237037919</td><td>6483.0795763685455</td><td>2.4578790398205776</td><td>20109</td><td>0.9924495350497905</td><td>606</td></tr>\n",
-       "<tr><td>46804135891</td><td>opticians, optica...</td><td>2.93</td><td>c</td><td>5871675.405216906</td><td>195655</td><td>28.876770729055476</td><td>14.995088166968143</td><td>1975.5919347831643</td><td>6495.082802381439</td><td>6486.2131312768515</td><td>2.456755002427747</td><td>20109</td><td>0.5305131766343497</td><td>606</td></tr>\n",
-       "<tr><td>80324045558</td><td>gift, card, novel...</td><td>1.47</td><td>c</td><td>6037559.227590772</td><td>164419</td><td>50.46418613606594</td><td>14.487045677369357</td><td>1974.6811439067262</td><td>6503.3918865822425</td><td>6493.121574148852</td><td>2.459331950686982</td><td>20107</td><td>0.22908055802067176</td><td>606</td></tr>\n",
-       "<tr><td>43186523025</td><td>florists supplies...</td><td>4.47</td><td>b</td><td>7553315.176859005</td><td>167852</td><td>56.08790941390954</td><td>14.730184948009128</td><td>1975.4696220479946</td><td>6497.871535042539</td><td>6489.126602006412</td><td>2.458823249052751</td><td>20106</td><td>0.7526535003252506</td><td>606</td></tr>\n",
-       "<tr><td>68216911708</td><td>computers, comput...</td><td>3.05</td><td>c</td><td>5816858.363979887</td><td>151084</td><td>30.02340244819238</td><td>14.935499820102965</td><td>1976.622938233036</td><td>6496.782822138482</td><td>6486.902405946259</td><td>2.4592253316036423</td><td>20099</td><td>0.6973622660511581</td><td>606</td></tr>\n",
-       "<tr><td>63290521567</td><td>artist supply, craft</td><td>6.48</td><td>a</td><td>3682751.741007679</td><td>152022</td><td>32.654616281303255</td><td>14.876980504565312</td><td>1978.5195826919787</td><td>6505.9178618882215</td><td>6496.830171290879</td><td>2.4584862717238587</td><td>20098</td><td>0.8970140744794232</td><td>606</td></tr>\n",
-       "<tr><td>21439773999</td><td>cable, satellite,...</td><td>6.1</td><td>a</td><td>7876172.146307617</td><td>100748</td><td>28.50447904811219</td><td>15.178324848181115</td><td>1978.6807877079445</td><td>6478.990068289229</td><td>6469.795320998835</td><td>2.4564795330924842</td><td>19975</td><td>2.89530689533459</td><td>606</td></tr>\n",
-       "<tr><td>64403598239</td><td>music, musical in...</td><td>6.31</td><td>a</td><td>7417347.373518812</td><td>94850</td><td>28.5043852245888</td><td>14.729985982955672</td><td>1976.0037111228255</td><td>6486.088816025336</td><td>6475.973411702595</td><td>2.457531892461807</td><td>19946</td><td>3.0056816705293317</td><td>606</td></tr>\n",
-       "<tr><td>72472909171</td><td>digital goods, bo...</td><td>6.33</td><td>a</td><td>5975880.463386031</td><td>85195</td><td>28.504522558681582</td><td>14.185347708188417</td><td>1972.2534538411878</td><td>6473.721487176515</td><td>6465.286276189855</td><td>2.458279241739558</td><td>19837</td><td>2.7244872227131243</td><td>606</td></tr>\n",
-       "<tr><td>79417999332</td><td>gift, card, novel...</td><td>4.95</td><td>b</td><td>7603832.250841753</td><td>82822</td><td>30.575489148444426</td><td>14.982135796147997</td><td>1978.8959455217214</td><td>6492.996436937092</td><td>6485.030639202093</td><td>2.4580461713071595</td><td>19820</td><td>2.6806358681949054</td><td>606</td></tr>\n",
-       "<tr><td>94493496784</td><td>gift, card, novel...</td><td>5.65</td><td>a</td><td>7628173.276189661</td><td>82896</td><td>30.579032159003333</td><td>14.230244428100864</td><td>1977.9635688091103</td><td>6495.677119523284</td><td>6484.472102393317</td><td>2.459724232773618</td><td>19764</td><td>3.096394655300415</td><td>606</td></tr>\n",
-       "<tr><td>60956456424</td><td>gift, card, novel...</td><td>4.69</td><td>b</td><td>6712193.885564317</td><td>75848</td><td>50.300127189358044</td><td>15.545730423478021</td><td>1977.571682839363</td><td>6503.473377017236</td><td>6497.962265320083</td><td>2.457447790317485</td><td>19635</td><td>1.751899568080986</td><td>606</td></tr>\n",
-       "<tr><td>32361057556</td><td>gift, card, novel...</td><td>6.61</td><td>a</td><td>7880990.1174681615</td><td>71720</td><td>30.571478263582794</td><td>15.549655546248491</td><td>1976.663970998327</td><td>6494.031037367601</td><td>6483.939852202984</td><td>2.457246235359736</td><td>19531</td><td>4.2670827559299065</td><td>606</td></tr>\n",
-       "<tr><td>91923722701</td><td>tent, awning</td><td>5.05</td><td>b</td><td>902042.0019989035</td><td>65339</td><td>30.462637253908813</td><td>13.008510147813867</td><td>1974.2678186075698</td><td>6498.462282863282</td><td>6489.022623547955</td><td>2.4582301535070954</td><td>19363</td><td>0.41937721688892005</td><td>606</td></tr>\n",
-       "<tr><td>49505931725</td><td>digital goods, bo...</td><td>4.7</td><td>b</td><td>5996670.246986962</td><td>57037</td><td>29.5373616628797</td><td>14.402775808481119</td><td>1975.488647719901</td><td>6499.972577449819</td><td>6491.099305713859</td><td>2.4593860125883222</td><td>18945</td><td>2.9845480837169176</td><td>606</td></tr>\n",
-       "</table>\n",
-       "only showing top 20 rows\n"
-      ],
-      "text/plain": [
-       "+------------+--------------------+---------+----+------------------+-----------+------------------+------------------+--------------------+-------------------+-------------------+----------------------+----------------+------------------------+---------------+\n",
-       "|merchant_abn|                tags|take_rate|type|     Total Revenue|Total Sales|    Merchant Fraud|    Consumer Fraud|Median Family Income|avg(seasonal_sales)|avg(original_sales)|Average Household Size|Unique Customers|Average Expected Revenue|Days with Sales|\n",
-       "+------------+--------------------+---------+----+------------------+-----------+------------------+------------------+--------------------+-------------------+-------------------+----------------------+----------------+------------------------+---------------+\n",
-       "| 64203420245|        tent, awning|     2.86|   c| 6299699.598407542|     217571|30.612495680513543|14.871396677745812|  1978.0475247160698|  6483.831479838419|   6475.44229377983|     2.458449885324781|           20111|       0.489725251044011|            606|\n",
-       "| 86578477987|watch, clock, jew...|     6.43|   a| 7972145.046437768|     227775|28.576456098300703|15.140652905079124|  1977.0436966304467|  6505.567195697163|  6494.275517067175|    2.4582956865327588|           20111|      1.3648947806370788|            606|\n",
-       "| 45629217853|gift, card, novel...|     6.98|   a| 7018507.434966652|     190768|30.571603398126562|15.773599561837635|  1974.7658831669883|  6501.068451731659| 6495.1992037447535|    2.4591949383544414|           20111|      1.5099632925580027|            606|\n",
-       "| 89726005175|        tent, awning|     6.01|   a| 7428298.547384338|     180185|30.468602464836877|14.907350810485063|  1976.4575353109303|  6473.880059383172|  6466.097259483214|    2.4586203069067913|           20110|      1.4710167475270712|            606|\n",
-       "| 24852446429|florists supplies...|     2.94|   c| 7254337.468013417|     241506| 52.77404521439999|15.138574786399698|  1974.2637946883308| 6499.6533651334585|  6490.692043261773|    2.4574702077794957|           20110|     0.35430937934354906|            606|\n",
-       "| 49891706470|        tent, awning|      5.8|   a| 5993213.999709736|     206878|30.484949771451102|14.911243830439796|  1974.3533096801013|  6493.379237037919| 6483.0795763685455|    2.4578790398205776|           20109|      0.9924495350497905|            606|\n",
-       "| 46804135891|opticians, optica...|     2.93|   c| 5871675.405216906|     195655|28.876770729055476|14.995088166968143|  1975.5919347831643|  6495.082802381439| 6486.2131312768515|     2.456755002427747|           20109|      0.5305131766343497|            606|\n",
-       "| 80324045558|gift, card, novel...|     1.47|   c| 6037559.227590772|     164419| 50.46418613606594|14.487045677369357|  1974.6811439067262| 6503.3918865822425|  6493.121574148852|     2.459331950686982|           20107|     0.22908055802067176|            606|\n",
-       "| 43186523025|florists supplies...|     4.47|   b| 7553315.176859005|     167852| 56.08790941390954|14.730184948009128|  1975.4696220479946|  6497.871535042539|  6489.126602006412|     2.458823249052751|           20106|      0.7526535003252506|            606|\n",
-       "| 68216911708|computers, comput...|     3.05|   c| 5816858.363979887|     151084| 30.02340244819238|14.935499820102965|   1976.622938233036|  6496.782822138482|  6486.902405946259|    2.4592253316036423|           20099|      0.6973622660511581|            606|\n",
-       "| 63290521567|artist supply, craft|     6.48|   a| 3682751.741007679|     152022|32.654616281303255|14.876980504565312|  1978.5195826919787| 6505.9178618882215|  6496.830171290879|    2.4584862717238587|           20098|      0.8970140744794232|            606|\n",
-       "| 21439773999|cable, satellite,...|      6.1|   a| 7876172.146307617|     100748| 28.50447904811219|15.178324848181115|  1978.6807877079445|  6478.990068289229|  6469.795320998835|    2.4564795330924842|           19975|        2.89530689533459|            606|\n",
-       "| 64403598239|music, musical in...|     6.31|   a| 7417347.373518812|      94850|  28.5043852245888|14.729985982955672|  1976.0037111228255|  6486.088816025336|  6475.973411702595|     2.457531892461807|           19946|      3.0056816705293317|            606|\n",
-       "| 72472909171|digital goods, bo...|     6.33|   a| 5975880.463386031|      85195|28.504522558681582|14.185347708188417|  1972.2534538411878|  6473.721487176515|  6465.286276189855|     2.458279241739558|           19837|      2.7244872227131243|            606|\n",
-       "| 79417999332|gift, card, novel...|     4.95|   b| 7603832.250841753|      82822|30.575489148444426|14.982135796147997|  1978.8959455217214|  6492.996436937092|  6485.030639202093|    2.4580461713071595|           19820|      2.6806358681949054|            606|\n",
-       "| 94493496784|gift, card, novel...|     5.65|   a| 7628173.276189661|      82896|30.579032159003333|14.230244428100864|  1977.9635688091103|  6495.677119523284|  6484.472102393317|     2.459724232773618|           19764|       3.096394655300415|            606|\n",
-       "| 60956456424|gift, card, novel...|     4.69|   b| 6712193.885564317|      75848|50.300127189358044|15.545730423478021|   1977.571682839363|  6503.473377017236|  6497.962265320083|     2.457447790317485|           19635|       1.751899568080986|            606|\n",
-       "| 32361057556|gift, card, novel...|     6.61|   a|7880990.1174681615|      71720|30.571478263582794|15.549655546248491|   1976.663970998327|  6494.031037367601|  6483.939852202984|     2.457246235359736|           19531|      4.2670827559299065|            606|\n",
-       "| 91923722701|        tent, awning|     5.05|   b| 902042.0019989035|      65339|30.462637253908813|13.008510147813867|  1974.2678186075698|  6498.462282863282|  6489.022623547955|    2.4582301535070954|           19363|     0.41937721688892005|            606|\n",
-       "| 49505931725|digital goods, bo...|      4.7|   b| 5996670.246986962|      57037|  29.5373616628797|14.402775808481119|   1975.488647719901|  6499.972577449819|  6491.099305713859|    2.4593860125883222|           18945|      2.9845480837169176|            606|\n",
-       "+------------+--------------------+---------+----+------------------+-----------+------------------+------------------+--------------------+-------------------+-------------------+----------------------+----------------+------------------------+---------------+\n",
-       "only showing top 20 rows"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.filter(F.col('Unique Customers') > 0.2*20111).sort('Unique Customers', ascending = False)"
    ]
   },
   {
@@ -6295,6 +6227,7 @@
     }
    ],
    "source": [
+    "#check the telecom tag since it has high revenue and high number of sales but less customers\n",
     "df.filter((F.col('tags') == 'telecom') & (F.col('Days with Sales')> 181)).sort('Total Revenue', ascending = False)"
    ]
   },
@@ -6302,7 +6235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reason for not Using Unique Customers - Telecom which has less customers but high number of sales, less merchants sell telecom but they buy from it very often "
+    "Unique customers is not an appropriate feature to remove merchants by since merchants with tags like telecom have fewer customers but they have sales on all days consistently which leads to high revenue."
    ]
   },
   {
@@ -6374,6 +6307,7 @@
     }
    ],
    "source": [
+    "#number of merchants who earn less than 1000000\n",
     "df.filter(F.col('Total Revenue') < 1000000).sort('Total Revenue', ascending = False).count()"
    ]
   },
@@ -6444,6 +6378,7 @@
     }
    ],
    "source": [
+    "#number of days with sales for merchants who make less than 1000000\n",
     "df.filter(F.col('Total Revenue') < 1000000).sort('Days with Sales', ascending = True)"
    ]
   },
@@ -6471,6 +6406,7 @@
     }
    ],
    "source": [
+    "#number of merchants who make more than 1000000\n",
     "df.filter(F.col('Total Revenue') > 1000000).sort('Total Revenue', ascending = False).count()"
    ]
   },
@@ -121674,6 +121610,13 @@
    ],
    "source": [
     "df.filter(F.col('tags') == 'health, beauty spas')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If any specific group has a higher fraud rate the model will remove them. "
    ]
   }
  ],
