--- a/notebooks/misc_fraud_findings.ipynb
+++ b/notebooks/misc_fraud_findings.ipynb
@@ -121616,7 +121616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If any specific group has a higher fraud rate the model will remove them. "
+    "If any specific group has a higher fraud rate the model will ignore them during ranking, as their expected revenue will be lower."
    ]
   }
  ],
